--- a/CW/app/src/main/res/layout/vegetables.xml
+++ b/CW/app/src/main/res/layout/vegetables.xml
@@ -90,9 +90,9 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/veg_potato"
             android:gravity="center_vertical"
-            android:textOn="Картошка"
-            android:textOff="Картошка"
-            android:textSize="14dp"
+            android:textOn="Картофель"
+            android:textOff="Картофель"
+            android:textSize="13dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
