--- a/CW/app/src/main/res/layout/selected_dishes.xml
+++ b/CW/app/src/main/res/layout/selected_dishes.xml
@@ -3,30 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:background="@drawable/background1"
     android:tileMode="repeat">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fillViewport="true"
         >
-        <ToggleButton
-            android:id="@+id/aaa"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_ananas"
-            android:gravity="center_vertical"
-            android:textOn="Ананас"
-            android:textOff="Ананас"
-            android:textSize="14dp"
-            android:textAlignment="center"
-            android:textColor="@color/color"
-            android:onClick="onToggleButtonClick"
-            android:checked="false"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
 
 
         <Button
@@ -44,22 +26,72 @@
         <TextView
             android:layout_width="250dp"
             android:layout_height="20dp"
-            android:text="New Text"
-            android:id="@+id/textView2"
-            android:layout_marginTop="33dp"
+            android:text="Что могу приготовить"
+            android:id="@+id/can"
+            android:textColor="#000000"
+            android:layout_marginTop="35dp"
             android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_centerHorizontal="true" />
 
         <TextView
-            android:layout_width="500dp"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="New Text"
             android:id="@+id/textView3"
-            android:layout_marginTop="50dp"
-            android:layout_below="@+id/aaa"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_below="@+id/can"
+            android:layout_alignLeft="@+id/textView7"
+            android:layout_alignStart="@+id/textView7"
+            android:textSize="20dp"
+            android:layout_marginTop="33dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/textView4"
+            android:layout_below="@+id/textView3"
+            android:layout_alignLeft="@+id/textView3"
+            android:layout_alignStart="@+id/textView3"
+            android:layout_marginTop="48dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/textView5"
+            android:layout_below="@+id/textView4"
+            android:layout_toLeftOf="@+id/can"
+            android:layout_toStartOf="@+id/can" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/textView6"
+            android:layout_below="@+id/textView5"
+            android:layout_alignLeft="@+id/textView4"
+            android:layout_alignStart="@+id/textView4"
+            android:layout_marginTop="54dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/textView7"
+            android:layout_below="@+id/textView6"
+            android:layout_toLeftOf="@+id/textView8"
+            android:layout_toStartOf="@+id/textView8"
+            android:layout_marginTop="71dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/textView8"
+            android:layout_below="@+id/textView7"
+            android:layout_alignRight="@+id/f_button_back"
+            android:layout_alignEnd="@+id/f_button_back"
+            android:layout_marginTop="70dp" />
 
     </RelativeLayout>
 
