Дизайн! 1) Обновил главное активити и активити "овощи". 2) Убрал заголовок у всех активити.

--- a/CW/app/src/main/res/drawable/vegetables_on_off.xml
+++ b/CW/app/src/main/res/drawable/vegetables_on_off.xml
@@ -4,6 +4,6 @@
         android:drawable="@drawable/check"
         android:state_checked="true" />
     <item
-        android:drawable="@drawable/fruit_off"
+        android:drawable="@drawable/veg_off"
         android:state_checked="false" />
 </selector>
