--- a/CW/app/src/main/res/layout/vegetables.xml
+++ b/CW/app/src/main/res/layout/vegetables.xml
@@ -16,8 +16,8 @@
             android:id="@+id/ve_13"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@drawable/button_background"
-            android:drawableTop="@drawable/veg_eggplant"
+            android:background="@android:color/transparent"
+            android:drawableTop="@drawable/veg1"
             android:gravity="center_vertical"
             android:textOn="Баклажан"
             android:textOff="Баклажан"
@@ -33,8 +33,8 @@
             android:id="@+id/ve_14"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@drawable/button_background"
-            android:drawableTop="@drawable/veg_peas"
+            android:background="@android:color/transparent"
+            android:drawableTop="@drawable/veg2"
             android:gravity="center_vertical"
             android:textOn="Горох"
             android:textOff="Горох"
@@ -50,8 +50,8 @@
             android:id="@+id/ve_15"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@drawable/button_background"
-            android:drawableTop="@drawable/veg_squash"
+            android:background="@android:color/transparent"
+            android:drawableTop="@drawable/veg3"
             android:gravity="center_vertical"
             android:textOn="Кабачек"
             android:textOff="Кабачек"
@@ -69,7 +69,7 @@
             android:id="@+id/ve_16"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@drawable/button_background"
+            android:background="@android:color/transparent"
             android:drawableTop="@drawable/veg_cabbage"
             android:gravity="center_vertical"
             android:textOn="Капуста"
@@ -89,7 +89,7 @@
             android:id="@+id/ve_17"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@drawable/button_background"
+            android:background="@android:color/transparent"
             android:drawableTop="@drawable/veg_potato"
             android:gravity="center_vertical"
             android:textOn="Картофель"
@@ -107,7 +107,7 @@
             android:id="@+id/ve_18"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@drawable/button_background"
+            android:background="@android:color/transparent"
             android:drawableTop="@drawable/veg_corn"
             android:gravity="center_vertical"
             android:textOn="Кукуруза"
@@ -126,7 +126,7 @@
             android:id="@+id/ve_19"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@drawable/button_background"
+            android:background="@android:color/transparent"
             android:drawableTop="@drawable/veg_bow"
             android:gravity="center_vertical"
             android:textOn="Лук"
@@ -146,7 +146,7 @@
             android:id="@+id/ve_20"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@drawable/button_background"
+            android:background="@android:color/transparent"
             android:drawableTop="@drawable/veg_carrot"
             android:gravity="center_vertical"
             android:textOn="Морковь"
@@ -165,7 +165,7 @@
             android:id="@+id/ve_21"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@drawable/button_background"
+            android:background="@android:color/transparent"
             android:drawableTop="@drawable/veg_cucumber"
             android:gravity="center_vertical"
             android:textOn="Огурец"
@@ -185,7 +185,7 @@
             android:id="@+id/ve_22"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@drawable/button_background"
+            android:background="@android:color/transparent"
             android:drawableTop="@drawable/veg_pepper"
             android:gravity="center_vertical"
             android:textOn="Перец"
@@ -205,7 +205,7 @@
             android:id="@+id/ve_23"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
-            android:background="@drawable/button_background"
+            android:background="@android:color/transparent"
             android:drawableTop="@drawable/veg_tomato"
             android:gravity="center_vertical"
             android:textOn="Помидор"
@@ -223,7 +223,7 @@
             android:id="@+id/ve_24"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@drawable/button_background"
+            android:background="@android:color/transparent"
             android:drawableTop="@drawable/veg_radish"
             android:gravity="center_vertical"
             android:textOn="Редис"
@@ -242,7 +242,7 @@
             android:id="@+id/ve_25"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@drawable/button_background"
+            android:background="@android:color/transparent"
             android:drawableTop="@drawable/veg_beet"
             android:gravity="center_vertical"
             android:textOn="Свекла"
@@ -262,7 +262,7 @@
             android:id="@+id/ve_26"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@drawable/button_background"
+            android:background="@android:color/transparent"
             android:drawableTop="@drawable/veg_bean"
             android:gravity="center_vertical"
             android:textOn="Фасоль"
@@ -280,7 +280,7 @@
             android:id="@+id/ve_27"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@drawable/button_background"
+            android:background="@android:color/transparent"
             android:drawableTop="@drawable/veg_garlic"
             android:gravity="center_vertical"
             android:textOn="Чеснок"
